objects/IBM_Device__c.object
<CustomObject>
    <fields>
        <fullName>Automotive_Opportunity__c</fullName>
        <label>Automotive Opportunity</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IBM Devices</relationshipLabel>
        <relationshipName>IBM_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DWIN_Actual__c</fullName>
        <label>DWIN Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DWIN_YEAR__c</fullName>
        <label>DWIN YEAR</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWIN__c</fullName>
        <label>DWIN QTR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliverable_Type__c</fullName>
        <label>Deliverable Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_System__c</fullName>
        <label>Design System</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Category__c</fullName>
        <label>Device Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECCN_Classification__c</fullName>
        <label>ECCN Classification</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IP_Request_Numbers_and_Titles__c</fullName>
        <label>IP Request Numbers and Titles</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MD_Part_Name__c</fullName>
        <label>MD Part Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFG_REP__c</fullName>
        <label>MFG REP CORP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_SEG1__c</fullName>
        <label>MKT SEG1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_SEG2__c</fullName>
        <label>MKT SEG2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_SEG3__c</fullName>
        <label>MKT SEG3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_ID__c</fullName>
        <label>MPW ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Type__c</fullName>
        <label>Module Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPPCN__c</fullName>
        <label>OPPCN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPP_State__c</fullName>
        <label>OPP State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPP_Status__c</fullName>
        <label>OPP Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPTCN__c</fullName>
        <label>OPTCN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPT_State_Sort__c</fullName>
        <label>OPT State Sort</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPT_Status__c</fullName>
        <label>OPT Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCO2_REV_M__c</fullName>
        <label>PCO2 REV $M</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKG_Name__c</fullName>
        <label>PKG Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_Ship_Actual__c</fullName>
        <label>PR Ship Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PStart_Actual__c</fullName>
        <label>PStart Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pco2_Eligible__c</fullName>
        <label>Pco2 Eligible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_FAM__c</fullName>
        <label>Product FAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Usage__c</fullName>
        <label>Product Usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTM_E_Release_Actual__c</fullName>
        <label>RTM E Release Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTM_E_Release_Commit__c</fullName>
        <label>RTM E Release Commit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTM_E_Release_Outlook__c</fullName>
        <label>RTM E Release Outlook</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTM_E_Release_Plan__c</fullName>
        <label>RTM E Release Plan</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_to_Layout_Actual__c</fullName>
        <label>Release to Layout Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Geo__c</fullName>
        <label>Sales Geo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Corp__c</fullName>
        <label>Sold to Corp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Brand__c</fullName>
        <label>Sub Brand</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>IBM Device</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OPTCN__c</columns>
        <columns>OPPCN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IDN-{000000}</displayFormat>
        <label>IBM Device Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IBM Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>